docs: badges controller
